
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int szData ;
typedef int LONG ;
typedef int HKEY ;
typedef int DWORD ;
typedef int BYTE ;


 int BRegCloseKey (int ) ;
 int BRegOpenKey (int ,int ,int *) ;
 int BRegSetValueEx (int ,int ,int *,int ,int const*,int ) ;
 scalar_t__ FAILED (int ) ;
 int REG_SZ ;
 int TestSetKey ;
 int TestSetPath ;

LONG TestSetRegKey()
{
 HKEY hKey;
 LONG lResult;

 lResult = BRegOpenKey(TestSetKey, TestSetPath, &hKey);
 if (FAILED(lResult))
  return lResult;

 DWORD dwType = REG_SZ;
 static char szData[] = "TEST VALUE";
 lResult = BRegSetValueEx(hKey, TestSetPath, ((void*)0), dwType, (const BYTE *)&szData, (DWORD)sizeof(szData));
 BRegCloseKey(hKey);

 return lResult;
}
